--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <NAV class="navigation-bar">
         <a href="#">HOME</a>
         <a href="#">ABOUT US</a>
-        <a href="#">CONTACT ME</a>
+        <a href="#contact">CONTACT ME</a>
         <a href="#">BLOG</a>
         <a href="#">PORTFOLIO</a>
     </NAV>
