--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h2 class="logo"><b>SYEDA LAIBA </b></h2>
     <NAV class="navigation-bar">
         <a href="#">HOME</a>
-        <a href="#">ABOUT US</a>
+        <a href="#about">ABOUT US</a>
         <a href="#contact">CONTACT ME</a>
-        <a href="#">BLOG</a>
-        <a href="#">PORTFOLIO</a>
+        <a href="#skils">SKILS</a>
+        <a href="#TESTIMONY">TESTIMONY</a>
     </NAV>
     <A class="button">LET'S TALK</A>
     </nav>
@@ -40,7 +40,7 @@
             </div>
         </div>
     </main>
-    <section id="SKILLS" >
+    <section id="skils" >
         <h2><b>SKILLS</b></h2>
         <DIV class="text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum illum quos ut ex accusantium voluptate consectetur, accusamus assumenda a, doloribus error magnam alias exercitationem quae soluta! Soluta, veritatis amet! Illo!
