--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#">HOME</a>
         <a href="#about">ABOUT US</a>
         <a href="#contact">CONTACT ME</a>
-        <a href="#skils">SKILS</a>
+        <a href="#">SKILS</a>
         <a href="#TESTIMONY">TESTIMONY</a>
     </NAV>
     <A class="button">LET'S TALK</A>
